# learning_g2o

./: README.md
g2o_3d2d/: BA-3Dto2D.cpp  CMakeLists.txt
g2o_curve_fitting/: CMakeLists.txt  main.cpp
odometry-calibration/: LSOdomCalib.m  apply_odometry_correction.m  compute_odometry_trajectory.m  ls_calibrate_odometry.m
